alignment issue for ipad

--- a/ui.frontend/src/main/webpack/etisalat/styles/share-this-design.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/share-this-design.scss
@@ -1,8 +1,9 @@
-
+.share {
  .main-text-action-wrapper {
   & .action.share.fix.true {
     width:100%;   
     @include respond-to-max($tablet) {
+    
       z-index: 22;
       top: toRem(55);
       left: 0;
@@ -41,7 +42,7 @@
         &.icon-list {
           @include respond-to-max($tablet) {
             padding: 0 1rem;
-            height: 56px;
+           // height: 56px;
           }
          & .links-item {
               padding: 0 toRem(8);
@@ -313,7 +314,7 @@
   .icon-list {
     @include respond-to-max($tablet) {
       padding: 0 1rem;
-      height: 56px;
+      //height: 56px;
     }
     .links-item {
         padding: 0 toRem(8);
@@ -422,7 +423,7 @@
 	
 	// }
 }
-
+}
 
 
 
